test/lit/pto/mgather_missing_coalesce_verify_invalid.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.
// RUN: not ptoas --pto-arch=a5 %s 2>&1 | FileCheck %s

module attributes {pto.target_arch = "a5"} {
  func.func @mgather_missing_coalesce(%src: !pto.ptr<f32>) {
    %c0 = arith.constant 0 : index
    %c1 = arith.constant 1 : index
    %c32 = arith.constant 32 : index
    %src_view = pto.make_tensor_view %src,
                shape = [%c32, %c32], strides = [%c32, %c1]
                {layout = #pto.layout<nd>}
              : !pto.tensor_view<?x?xf32>
    %src_part = pto.partition_view %src_view,
                offsets = [%c0, %c0], sizes = [%c32, %c32]
              : !pto.tensor_view<?x?xf32>
                -> !pto.partition_tensor_view<32x32xf32>
    %idx = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=i32, rows=32, cols=32, v_row=32, v_col=1, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    %dst = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=f32, rows=32, cols=32, v_row=32, v_col=32, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    pto.mgather ins(%src_part, %idx : !pto.partition_tensor_view<32x32xf32>, !pto.tile_buf<loc=vec, dtype=i32, rows=32, cols=32, v_row=32, v_col=1, blayout=row_major, slayout=none_box, fractal=512, pad=0>)
                outs(%dst : !pto.tile_buf<loc=vec, dtype=f32, rows=32, cols=32, v_row=32, v_col=32, blayout=row_major, slayout=none_box, fractal=512, pad=0>)
                {gatherOob = #pto<gather_oob zero>}
    return
  }
}

// CHECK: error: 'pto.mgather' op requires attribute 'coalesce'
